--- a/themes/next/source/css/_common/components/post/post.styl
+++ b/themes/next/source/css/_common/components/post/post.styl
@@ -33,6 +33,15 @@
   transform: rotate(30deg);
 }
 
+.post-body p a{
+    color: #0593d3;
+    border-bottom: none;
+    &:hover {
+      color: #0477ab;
+      text-decoration: underline;
+    }
+  }
+  
 .use-motion {
   if hexo-config('motion.transition.post_block') {
     .post-block,
